# home_work_oop

./: README.md  pyproject.toml
src/: 14.2_main.py  15.1_main.py  16.1_main.py  16.2_main.py  17.1_main.py  base_product.py  mixins.py  models.py
tests/: conftest.py  test_base_product.py  test_mixins.py  test_models.py
